[package]
name = "rc-application"
version = "0.1.0"
authors = ["pluth <pluth@0t.re>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
themis-core = { path = "../vendor/themis/themis-core", features = ["metrics"] }

rc-bft2 = { path = "../rc-bft2", features = ["metrics"], optional = true }
rc-blockchain = { path = "../rc-blockchain" }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros",] }
argh = "0.1.7"
bytes = "1.1.0"
futures-util = "0.3.21"
ring = "0.16.20"
anyhow = "1.0.57"
tracing = "0.1.34"
prost = "0.10.1"
enum_dispatch = "0.3.8"
serde_bytes = "0.11.5"
rmp-serde = "1.1.0"
atty = "0.2.14"
ring-compat = "0.4.1"
rand = "0.8.5"
socket2 = { version = "0.4.4", optional = true }
prometheus = { version = "0.13.0", default-features = false, optional = true }
lazy_static = { version = "1.4.0", optional = true }
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }

rc-broadcaster = { path = "../rc-broadcaster" }

# osf
osf = { path = "../libosf/osf", optional = true}

# mvb
# rc-mvb = { path = "../rc-mvb", features = ["serde"], optional = true}
thread-priority = { version = "0.8.2", optional = true }

# baseline
themis-pbft = { path = "../vendor/themis/themis-pbft", optional = true }
themis-client = { path = "../vendor/themis/themis-client", optional = true }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio"] }
pprof = { version = "0.8.0", features = ["criterion", "flamegraph"] }

[features]
metrics = ["prometheus", "lazy_static"]
mvb = [
    # "rc-mvb",
    "thread-priority"
]
osfstream = ["osf", "socket2", "metrics"]
baseline = ["themis-pbft", "themis-client"]
default = ["rc-bft2", "themis-pbft"]

[[bin]]
name = "railchain"
# required-features = ["mvb"]

[[bin]]
name = "baseline-client"
required-features = ["mvb", "themis-client"]

[[bin]]
name = "baseline-server"
required-features = ["mvb", "themis-pbft"]
