[package]
name = "rc-benchcontrol"
version = "0.1.0"
authors = ["Kai Bleeke <bleeke@ibr.cs.tu-bs.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.0", features = ["net", "rt", "macros", "time", "sync"] }
