[package]
name = "rc-bft2"
version = "0.1.0"
authors = ["Kai Bleeke <bleeke@ibr.cs.tu-bs.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
themis-pbft = { path = "../vendor/themis/themis-pbft" }
themis-core = { path = "../vendor/themis/themis-core" }
futures-util = { version = "0.3.21", default-features = false }
bytes = "1.1.0"
tokio-util = { version = "0.7.1", features = ["time"] }
ring = "0.16.20"
tracing = "0.1.34"
slotmap = "1.0.6"
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.18.0", features = ["macros", "test-util"] }
futures-util = { version = "0.3.21", default-features = false }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tokio-test = "0.4.2"

[features]
metrics = ["themis-pbft/metrics"]
