[package]
name = "rc-blockchain"
version = "0.1.0"
authors = ["Kai Bleeke <k.bleeke@tu-bs.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

themis-core = { path = "../vendor/themis/themis-core"}
prost = "0.10.1"
prost-types = "0.10.1"
bytes = { version = "1.1.0", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.5"
enum_dispatch = "0.3.8"
digest = "0.9"
tracing = "0.1.34"

[build-dependencies]
prost-build = "0.10.1"
