[package]
name = "rc-broadcaster"
version = "0.1.0"
authors = ["Kai Bleeke <bleeke@ibr.cs.tu-bs.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
themis-core = { path = "../vendor/themis/themis-core"}
rc-blockchain = { path = "../rc-blockchain" }
tokio = { version = "1.18.0", features = ["rt", "net", "macros", "io-std", "io-util", "process", "time"] }
futures-util = "0.3.21"
structopt = "0.3.26"
anyhow = "1.0.57"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
ring = "0.16.20"
bytes = "1.1.0"
serde ={ version = "1.0.136", features = ["derive"] }
ron = "0.7.0"
rmp-serde = "1.1.0"

[[bin]]
name = "broadcaster"
path = "src/main.rs"
