[package]
name = "rc-chaintovictoria"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rc-blockchain = { path = "../rc-blockchain"}
rc-victoria = { path = "../rc-victoria" }
osf = { path = "../libosf/osf"}
tokio = { version = "1.18.0", features = ["macros", "rt"] }
prost = "0.10.1"
tracing-subscriber = "0.3.11"
anyhow = "1.0.57"
argh = "0.1.7"

[[bin]]
path = "src/main.rs"
name = "chaintovic"
