[package]
name = "rc-msgdump"
version = "0.1.0"
authors = ["Kai Bleeke <bleeke@ibr.cs.tu-bs.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
themis-core = { path = "../vendor/themis/themis-core" }
serde = "1.0.136"
serde_json = "1.0.79"
rmp-serde = "1.1.0"
bytes = "1.1.0"
anyhow = "1.0.57"
tokio-util = "0.6"
structopt = "0.3.26"
base64 = "0.13.0"
rc-blockchain = {path = "../rc-blockchain", default-features = false}
prost = "0.10.1"
