[package]
name = "rc-victoria"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rc-blockchain = { path = "../rc-blockchain"}
prost = "0.10.1"
osf = { path = "../libosf/osf"}
tokio = { version = "1.18.0", features = ["macros", "rt"] }
anyhow = "1.0.57"
tracing = "0.1.34"
reqwest = { version = "0.11.10", default-features = false }
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
