[package]
name = "osf"
version = "0.1.0"
authors = ["pluth <pluth@0t.re>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = [ "derive" ] }
quick-xml = { version = "0.22.0", features = [ "serialize" ] }
bytes = "1.1.0"
thiserror = "1.0.30"
serde_with = { version = "1.13.0", default-features = false }
tokio = { version = "1.18.0", features = ["io-util"], optional = true }
tracing = "0.1.34"
chrono = "0.4.19"


